--- a/webpage.html
+++ b/webpage.html
@@ -1,6 +1,5 @@
-<html>
-<head>
-<title>My first webpage</title>
+<html>www.github.com
+<head>www.google.com
 </head>
 <body>
 <h1>This is my first webpage!</h1>
